8331912: [lworld] C2: assert(!had_error) failed: bad dominance with TestFlatInArraysFolding.java